# snaak_manipulation

./: CMakeLists.txt  README.md  package.xml
action/: ExecuteTrajectory.action  FollowTrajectory.action  ManipulateIngredient.action  Pickup.action  Place.action  ReturnHome.action
config/: offsets.yaml
launch/: manipulation_launch.py  snaak_manipulation_launch.py
scripts/: manipulation_actions_node.py  manipulation_constants.py  manipulation_node.py  manipulation_primary_node.py  snaak_manipulation_constants.py  snaak_manipulation_node.py  snaak_manipulation_utils  snaak_manipulation_utils.py
share/snaak_manipulation/: assembly2bin1_verified.pkl  assembly2bin2_verified.pkl  assembly2bin3_verified.pkl  assembly2home_verified.pkl  bin12assembly_verified.pkl  bin12home_verified.pkl  bin22assembly_verified.pkl  bin22home_verified.pkl  bin32assembly_verified.pkl  bin32home_verified.pkl  home2assembly_verified.pkl  home2bin1_verified.pkl  home2bin2_verified.pkl  home2bin3_verified.pkl
